[package]
name = "rust-aliddns"
version = "0.1.0"
authors = ["Pader <ypnow@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
curl = "0.4.30"
json = "0.12.4"
urlencoding = "1.1.1"
chrono = "0.4.11"
rust-crypto = "0.2.36"
base64 = "0.12.3"
dns-lookup = "1.0.3"
